fix column gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body {
 
     justify-content: center;
     align-items: center;
+    column-gap: 24px;
 }
 
 .container {
